--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,11 @@
 	</section>
 	<hr />
 	<section>
-		<div class="leftMenu">Trip Photos</div>
+		<div class="leftMenu">
+			<div class="category">
+				Trip Photos
+			</div>
+		</div>
 		<div class="mainContainer">
 			<div>
 			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
@@ -25,8 +29,11 @@
 			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
 			</div>
 		</div>
+		<div class="button btnToBack">back</div>
+		<div class="button btnToTop">^</div>
   </section>
   
   <script src="js/lightbox-plus-jquery.min.js"></script>
+  <script src="js/init.js"></script>
 </body>
 </html>
