spyscroll , fixed menu

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,22 +10,41 @@
 <body>
 	<section>
 	<div class="container"> 
-		<div class="mainTitle" ><i class="fa fa-camera-retro "></i>   My photo gallery</div>
-		<p>by RV</p>
+		<div class="mainTitle" ><i class="fa fa-camera-retro "></i>   My photo gallery <br />
+			<div class='lora secondTitle'>by RV</div>
+		</div>
 	</div>
 	</section>
 	<hr />
 	<section>
 		<div class="leftMenu">
+		<div class='leftMenuLine'></div>
 			<div class="category">
-				Trip Photos
+				<div class='sectionOne'>
+				Trip Photos One
+				</div>
+				<div class='sectionTwo'>
+				Trip Photos Two
+				</div>
 			</div>
 		</div>
 		<div class="mainContainer">
-			<div>
+			<div id='sectionOne'>
 			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
 			  <a class="example-image-link" href="img/tree.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/thumbnails/tree.jpg" alt="" /></a>
 			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-5.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-5.jpg" alt="" /></a>
+			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
+			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
+			  <a class="example-image-link" href="img/tree.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/thumbnails/tree.jpg" alt="" /></a>
+			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
+			  <a class="example-image-link" href="img/tree.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/thumbnails/tree.jpg" alt="" /></a>
+			</div>
+			<div id='sectionTwo'>
+			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
+			  <a class="example-image-link" href="img/tree.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/thumbnails/tree.jpg" alt="" /></a>
+			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-5.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-5.jpg" alt="" /></a>
+			  <a class="example-image-link" href="img/lake.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/thumbnails/lake.jpg" alt=""/></a>
+			  <a class="example-image-link" href="img/tree.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/thumbnails/tree.jpg" alt="" /></a>
 			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
 			</div>
 		</div>
