floating left menu, underline animation

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -20,11 +20,11 @@
 		<div class="leftMenu">
 		<div class='leftMenuLine'></div>
 			<div class="category">
-				<div class='sectionOne'>
-				Trip Photos One
+				<div class='categorySection sectionOne'>
+				<p>Trip Photos One</p>
 				</div>
-				<div class='sectionTwo'>
-				Trip Photos Two
+				<div class='categorySection sectionTwo'>
+				<p>Trip Photos Two</p>
 				</div>
 			</div>
 		</div>
@@ -51,6 +51,10 @@
 		<div class="button btnToBack">back</div>
 		<div class="button btnToTop">^</div>
   </section>
+  <footer>
+  <hr />
+  ©2016 '<img   />'
+  </footer>
   
   <script src="js/lightbox-plus-jquery.min.js"></script>
   <script src="js/init.js"></script>
