--- a/gallery/index.html
+++ b/gallery/index.html
@@ -50,12 +50,8 @@
 			  <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
 			</div>
 		</div>
-		<div class="button btnToBack"><img id='btnback' src='img/back.svg' /></div>
-		<div class="button btnToTop"><img id='btnToTop' src='img/ToTop.svg' /></div>
-		<object type="image/svg+xml" data="img/back.svg" id="alphasvg" width="64" height="64">
-		  Kiwi Logo <!-- fallback image in CSS -->
-		</object>
-		
+		<div class="button btnToBack"><object type="image/svg+xml" data="img/back.svg" id="toBack" width="100%" height="100%"></object></div>
+		<div class="button btnToTop"><object  type="image/svg+xml" data="img/ToTop.svg" id="toTop" width="100%" height="100%"></object><div class='clickAreaToTop'></div></div>
   </section>
   <footer>
   <hr />
