add fade in object effect

--- a/_main/index.html
+++ b/_main/index.html
@@ -161,7 +161,7 @@
       </div>
 
       <hr class="featurette-divider">
-	<div class='contactForm '><p>Contact Me:</p>
+	<div class='contactForm objectFadeIn'><p>Contact Me:</p>
 		<div class='container myForm '>
 			<form class='form-horizontal' id='contactForm' action='php/contactForm.php' method='POST'>
 		
