cv add header, work on content structure

--- a/_cv/index.html
+++ b/_cv/index.html
@@ -24,12 +24,7 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-	
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
 
 
@@ -37,7 +32,40 @@
  <!-- BODY                                                                 -->
  <div class="container ">
 	<div class="main_wrapper">
-	drgr
+		<div class="main_sheet">
+			<div class="row header">
+				<div class="row">
+					<div class="col-md-3 col-md-offset-1">pic<img src="img/personal_image.png" id="pers_image" /></div>
+					<div class="col-md-3 col-md-offset-1">Header</div>
+					<div class="col-md-3 col-md-offset-1">Contact <ul><li><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div></li><li><div class="circle"><i class="fa fa-mobile fa-1x"></div></i></li><li><div class="circle"><i class="fa fa-home fa-1x"></div></i></li></ul></div>
+				</div>
+				<div class="row">
+				<div class="col-md-6 col-md-offset-3">Describe</div>
+				</div>
+			</div>
+			<div class="row content">
+				<div class="col-md-6 section content1">
+					<div class="col-md-12 sub_header"><div class="sub_header_icon"></div><p>content header1</p></div>
+					<div class="col-md-6">.col-md-6
+						<dl class="dl-horizontal">
+						  <dt>Is it:</dt>
+						  <dd>it me</dd>
+						</dl>
+					</div>
+					<div class="col-md-6">.col-md-6</div>
+				</div>
+				<div class="col-md-6 section content2">
+					<div class="col-md-12 sub_header"><div class="sub_header_icon"><i class="fa fa-heart-o fa-2x"></i></div><p>content header2</p></div>
+					<div class="col-md-6">.col-md-6
+						<dl class="dl-horizontal">
+						  <dt>Is it:</dt>
+						  <dd>it me</dd>
+						</dl>
+					</div>
+					<div class="col-md-6">.col-md-6</div>
+				</div>
+			</div>
+		</div>
 	</div>
  </div>
     
