--- a/_cv/index.html
+++ b/_cv/index.html
@@ -82,13 +82,13 @@
 					</div>
 					
 					<div class="col-md-12 sub_header"><div class="sub_header_icon"><i class="fa fa-graduation-cap fa-2x"></i></div><p>content header3</p></div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4">
 						<div class="box"><div class='titleHoverOff'>SPM <img src='img/win.png'></div><div class='titleHoverIn'><span>1.class</span></div></div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4">
 						<div class="box"><div class='titleHoverOff'>ergerge</div><div class='titleHoverIn'><span>2.class</span></div></div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4">
 						<div class="box"><div class='titleHoverOff'>ergerge</div><div class='titleHoverIn'><span>3class</span></div></div>
 					</div>
 				</div>
