--- a/_main/index.html
+++ b/_main/index.html
@@ -220,7 +220,7 @@
 					<span class="input-group-addon glyphicon glyphicon-pencil"></span>
 					<textarea type="text" name='textarea' class="form-control imputMessage" rows="5" placeholder="Message" pattern="[^'\x22]+" required></textarea>
 				  </div>
-				  <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
+				  <span class="glyphicon  form-control-feedback" aria-hidden="true"></span>
 				  <span  class="messageNote bg-danger sr-only">Message format error</span>
 				  <span  class="generalNote bg-danger sr-only">Specific error</span>
 				</div>
