--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section>
 	<div class="container"> 
-		<div class="mainTitle" ><img src='img/picture.svg' style='width:80px'>   My photo gallery <br />
+		<div class="mainTitle" ><img src='img/picture.svg'>   My photo gallery <br />
 			<div class='lora secondTitle'>by RV</div>
 		</div>
 	</div>
