improve main, add external php to gallery

--- a/_main/index.html
+++ b/_main/index.html
@@ -47,8 +47,17 @@
 			</svg>
 		</div>
     </div>
-
-
+	<!---Hide menu--------------------------------------->
+	<div class='container hideMenu'>
+		
+	</div>
+	<!--================================================->
+	<!---Introduction------------------------------------>
+	<div class='container introduction'>
+		
+	</div>
+	
+	<!--================================================->
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -167,7 +176,7 @@
           <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
-
+/**/
       <hr class="featurette-divider">
 	<div class='contactForm objectFadeIn'><p>Contact Me:</p>
 		<div class='container myForm '>
@@ -234,7 +243,7 @@
 				<p>*required</p>
 			</form>
 		</div>
-	  </div>
+	 </div>
 	  
 	<div class='contactSpiner'><i class="fa fa-spinner fa-spin"></i></div>
    <!----  modal window for display status of email send, normally hide --->
@@ -254,7 +263,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	</div><!-- /.container -->
     
 <!-- FOOTER -->
