--- a/_main/index.html
+++ b/_main/index.html
@@ -33,7 +33,7 @@
   </head>
 
 
- <body>
+ <body data-spy="scroll" data-target=".navbar" >
     <div class="navbar-wrapper ">
 		<div class="navbar-container">
 			<svg id="svgelem">
@@ -48,8 +48,28 @@
 		</div>
     </div>
 	<!---Hide menu--------------------------------------->
-	<div class='container hideMenu'>
-		
+	<div class='container changeColor'>
+		<nav class="navbar navbar-fixed-top">
+		  <div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>                        
+			  </button>
+			  <a class="navbar-brand" href="#">WebSiteName</a>
+			</div>
+			<div>
+			  <div class="collapse navbar-collapse" id="myNavbar" >
+				<ul class="nav navbar-nav">
+				  <li><a  href="#section1">Section 1</a></li>
+				  <li><a  href="#section2">Section 2</a></li>
+				  <li><a  href="#section3">Section 3</a></li>
+				</ul>
+			  </div>
+			</div>
+		  </div>
+		</nav>    
 	</div>
 	<!--================================================->
 	<!---Introduction------------------------------------>
@@ -57,6 +77,24 @@
 		
 	</div>
 	
+	
+	<div id="section1" class="container-fluid scrollclass">
+	  <h1>Section 1</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section2" class="container-fluid scrollclass">
+	  <h1>Section 2</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section3" class="container-fluid scrollclass">
+	  <h1>Section 3</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+
+
 	<!--================================================->
     <!-- Carousel
     ================================================== -->
