--- a/_main/index.html
+++ b/_main/index.html
@@ -47,7 +47,7 @@
 			</svg>
 		</div>
     </div>
-	<!---Hide menu--------------------------------------->
+<!-------------------------------------------------------Main menu--------------------------------------->
 	<div class='container changeColor'>
 		<nav class="navbar navbar-fixed-top">
 		  <div class="container-fluid">
@@ -57,10 +57,10 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>                        
 			  </button>
-			  <a class="navbar-brand" href="#">WebSiteName</a>
+			  <a class="navbar-brand" href="#"><img src='img/myBrand.jpg' /></a>
 			</div>
 			<div>
-			  <div class="collapse navbar-collapse" id="myNavbar" >
+			  <div class="collapse navbar-collapse navbar-right" id="myNavbar" >
 				<ul class="nav navbar-nav">
 				  <li><a  href="#section1">Section 1</a></li>
 				  <li><a  href="#section2">Section 2</a></li>
@@ -74,12 +74,119 @@
 	<!--================================================->
 	<!---Introduction------------------------------------>
 	<div class='container introduction'>
-		
+		<div class='row'>
+			<h2>Introduction</h2>
+		</div>
+		<div class='row'>
+			<div class='col-md-4 edges_vertical'>
+				<img src='img/picture.jpg' />
+			</div>
+			<div class='col-md-4 edges_vertical edges_horizontal text-justify '>
+				<h4><p><strong>My story</strong></p></h4>
+				<em >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
+				<div class='more_about'><strong>Find more here</strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
+			</div>
+			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
+				<h4><p><strong>Personal information:</strong></p></h4>
+				<ul class="text-justify">
+					<li><div class='border_box'><strong>Name</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Age</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Phone</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Email</strong> <span>Lorem ipsum</span></div></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 	
+	<!--================================================->
+	<!---Skills------------------------------------------>
+	<div class='container skills'>
+		<div class='row'>
+			<h2>Skills</h2>
+		</div>
+		<div class='row'>
+			<div class='col-md-5 col-md-offset-2 edges_vertical edges_horizontal text-center'>
+				<img src='img/picture.jpg' />
+			</div>
+			<div class='col-md-5 edges_vertical edges_horizontal text-left'>
+				<h4><p><strong>PC loremepsum</strong></p></h4>
+				<dl class="dl-horizontal progress_bars">
+				  <dt>...1...</dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				  <dt>...2...</dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				  <dt>...3...</dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				  <dt>...4...</dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				  <dt>...5...</dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				</dl>
+			</div>														
+		</div>
+	</div>
+	<!--================================================+++++->
+	<!---Experiences------------------------------------------>
+	
+	<div class='container experiences'>
+		<div class='row'>
+			<h2>Exp</h2>
+		</div>
+		<div class='row'>
+			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
+				<dl class="dl-horizontal">
+				  <dt><em>Time</em></dt>
+				  <dd><em>CM</em></dd>
+				  <dt>2.5.87-3.6.56</dt>
+				  <dd>A&B</dd>
+				</dl>
+			</div>
+		</div>
+	</div>
+	<!--================================================+++++->
+	<!---Projects--------------------------------------------->
+	<div class='container projects'>
+		<div class='row'>
+			<h2>Projects</h2>
+		</div>
+		<div class='row'>
+			<div class='col-md-5 col-md-offset-1 edges_vertical text-center'>
+				<div class="box"><div class='titleHoverOff'> <img src='img/win.png'>SPM1</div><div class='titleHoverIn'><span>1.class</span></div></div>
+			</div>
+			<div class='col-md-5  edges_vertical text-center'>
+				<div class="box"><div class='titleHoverOff'><img src='img/win.png'>SPM2</div><div class='titleHoverIn'><span>FoRPi</span></div></div>
+			</div>
+			<div class='col-md-offset-1'></div>
+		</div>
+	</div>
 	
 	<div id="section1" class="container-fluid scrollclass">
-	  <h1>Section 1</h1>
+	  <h1> 1</h1>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
