--- a/_main/index.html
+++ b/_main/index.html
@@ -81,9 +81,13 @@
 			<div>
 			  <div class="collapse navbar-collapse navbar-right" id="myNavbar" >
 				<ul class="nav navbar-nav">
-				  <li><a  href="#section1">Section 1</a></li>
-				  <li><a  href="#section2">Section 2</a></li>
-				  <li><a  href="#section3">Section 3</a></li>
+				  <li><a  href="#introduction">Introduction</a></li>
+				  <li><a  href="#skills">Skills</a></li>
+				  <li><a  href="#experiences">Experiences</a></li>
+				  <li><a  href="#projects">Projects</a></li>
+				  <li><a  href="#interests">Interests</a></li>
+				  <li><a  href="#contact">Contact Me</a></li>
+				  
 				</ul>
 			  </div>
 			</div>
@@ -92,7 +96,7 @@
 	</div>
 	<!--================================================->
 	<!---Introduction------------------------------------>
-	<div class='container introduction'>
+	<div id='introduction' class='container spyScroll introduction '>
 		<div class='row'>
 			<h2>Introduction</h2>
 		</div>
@@ -119,7 +123,7 @@
 	
 	<!--================================================->
 	<!---Skills------------------------------------------>
-	<div class='container skills'>
+	<div id='skills' class='container spyScroll skills'>
 		<div class='row'>
 			<h2>Skills</h2>
 		</div>
@@ -172,9 +176,9 @@
 	<!--================================================+++++->
 	<!---Experiences------------------------------------------>
 	
-	<div class='container experiences'>
+	<div id='experiences' class='container spyScroll experiences'>
 		<div class='row'>
-			<h2>Exp</h2>
+			<h2>Experiences</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
@@ -189,7 +193,7 @@
 	</div>
 	<!--================================================+++++->
 	<!---Projects--------------------------------------------->
-	<div class='container projects'>
+	<div id='projects' class='container spyScroll projects'>
 		<div class='row'>
 			<h2>Projects</h2>
 		</div>
@@ -204,7 +208,7 @@
 	</div>
 	<!--================================================+++++->
 	<!---Interests--------------------------------------------->
-	<div class='container interests'>
+	<div id='interests' class='container spyScroll interests'>
 		<div class='row'>
 			<h2>Interests</h2>
 		</div>
@@ -270,94 +274,12 @@
 		</div>
 	</div>
 	
-	<div id="section1" class="container-fluid scrollclass">
-	  <h1> 1</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	</div>
-	<div id="section2" class="container-fluid scrollclass">
-	  <h1>Section 2</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	</div>
-	<div id="section3" class="container-fluid scrollclass">
-	  <h1>Section 3</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	</div>
-
-
-	
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette ">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-/**/
-      <hr class="featurette-divider">
-	<div class='contactForm objectFadeIn'><p>Contact Me:</p>
+<!--------------CONTACT Form---------------------------------------------->
+	<div id='contact'></div>
+	<div class='contactForm spyScroll'>
+		<div class='row'>
+			<h2>Contact Me:</h2>
+		</div>
 		<div class='container myForm '>
 			<form class='form-horizontal' id='contactForm' action='php/contactForm.php' method='POST'>
 		
@@ -442,8 +364,6 @@
 			</div>
 		</div>
 	</div>
-
-	</div><!-- /.container -->
     
 <!-- FOOTER -->
 	<footer >
