--- a/_main/index.html
+++ b/_main/index.html
@@ -97,17 +97,17 @@
 	<!--================================================->
 	<!---Introduction------------------------------------>
 	<div id='introduction' class='container spyScroll introduction '>
-		<div class='row'>
-			<h2>Introduction</h2>
+		<div class='row '>
+			<h2 class='objectFadeIn'>Introduction</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-4 edges_vertical'>
 				<img src='img/picture.jpg' />
 			</div>
-			<div class='col-md-4 edges_vertical edges_horizontal text-justify '>
+			<div class='col-md-4 myStory edges_vertical edges_horizontal text-justify '>
 				<h4><p><strong>My story</strong></p></h4>
 				<em >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
-				<div class='more_about'><strong>Find more here</strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
+				<div class='more_about'><strong>Find more here </strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
 			</div>
 			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
 				<h4><p><strong>Personal information:</strong></p></h4>
@@ -125,7 +125,7 @@
 	<!---Skills------------------------------------------>
 	<div id='skills' class='container spyScroll skills'>
 		<div class='row'>
-			<h2>Skills</h2>
+			<h2 class='objectFadeIn'>Skills</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-5 col-md-offset-2 edges_vertical edges_horizontal text-center'>
@@ -173,12 +173,13 @@
 			</div>														
 		</div>
 	</div>
+	<div class='skew_border'></div>
 	<!--================================================+++++->
 	<!---Experiences------------------------------------------>
 	
 	<div id='experiences' class='container spyScroll experiences'>
 		<div class='row'>
-			<h2>Experiences</h2>
+			<h2 class='objectFadeIn'>Experiences</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
@@ -195,7 +196,7 @@
 	<!---Projects--------------------------------------------->
 	<div id='projects' class='container spyScroll projects'>
 		<div class='row'>
-			<h2>Projects</h2>
+			<h2 class='objectFadeIn'>Projects</h2>
 		</div>
 		<div class='row'>
 			<div class=' project_container col-md-5 col-md-offset-2 edges_vertical text-center'>
@@ -210,7 +211,7 @@
 	<!---Interests--------------------------------------------->
 	<div id='interests' class='container spyScroll interests'>
 		<div class='row'>
-			<h2>Interests</h2>
+			<h2 class='objectFadeIn'>Interests</h2>
 		</div>
 		<div class='row'>
 			<div class=' gallery_container col-md-7 col-md-offset-2 edges_vertical text-center'>
