--- a/_main/index.html
+++ b/_main/index.html
@@ -102,7 +102,7 @@
 		</div>
 		<div class='row'>
 			<div class='col-md-4 edges_vertical'>
-				<img src='img/picture.jpg' />
+				<img src='img/personal_pic.jpg' />
 			</div>
 			<div class='col-md-4 myStory edges_vertical edges_horizontal text-justify '>
 				<h4><p><strong>My story</strong></p></h4>
@@ -128,8 +128,8 @@
 			<h2 class='objectFadeIn'>Skills</h2>
 		</div>
 		<div class='row'>
-			<div class='col-md-5 col-md-offset-2 edges_vertical edges_horizontal text-center'>
-				<img src='img/picture.jpg' />
+			<div class='col-md-6  edges_vertical edges_horizontal text-center'>
+				<img src='img/ifograph_cv.png' />
 			</div>
 			<div class='col-md-5 edges_vertical edges_horizontal text-left'>
 				<h4><p><strong>PC loremepsum</strong></p></h4>
@@ -170,10 +170,11 @@
 					</div>
 				  </dd>
 				</dl>
-			</div>														
+			</div>		
+			<div class='col-md-offset-1'></div>
 		</div>
 	</div>
-	<div class='skew_border'></div>
+	<!--			<div class='skew_border'></div>			->
 	<!--================================================+++++->
 	<!---Experiences------------------------------------------>
 	
@@ -199,12 +200,13 @@
 			<h2 class='objectFadeIn'>Projects</h2>
 		</div>
 		<div class='row'>
-			<div class=' project_container col-md-5 col-md-offset-2 edges_vertical text-center'>
+			<div class=' project_container col-md-5 col-md-offset-1 edges_vertical text-center'>
 				<div class="box"><div class='titleHoverOff'> <img src='img/win.png'><p>SPM1</p></div><div class='titleHoverIn'><span>1.class</span></div></div>
 			</div>
 			<div class='project_container col-md-5  edges_vertical text-center'>
 				<div class="box"><div class='titleHoverOff'><img src='img/win.png'><p>SPM2</p></div><div class='titleHoverIn'><span>FoRPi</span></div></div>
 			</div>
+			<div class='col-md-offset-1'></div>
 		</div>
 	</div>
 	<!--================================================+++++->
@@ -270,7 +272,7 @@
 					<!-- /.carousel -->
 			</div>
 			<div class='gallery_link col-md-3  edges_vertical text-center'>
-				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/gallery.jpg' /></a></div>
+				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/picture_icon.png' /></a></div>
 			</div>
 		</div>
 	</div>
