--- a/_main/index.html
+++ b/_main/index.html
@@ -114,8 +114,8 @@
 				<ul class="text-justify">
 					<li><div class='border_box'><strong>Name</strong> <span>Lorem ipsum</span></div></li>
 					<li><div class='border_box'><strong>Age</strong> <span>Lorem ipsum</span></div></li>
-					<li><div class='border_box'><strong>Phone</strong> <span>Lorem ipsum</span></div></li>
-					<li><div class='border_box'><strong>Email</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Skype</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Email</strong> <span><div class='secret_envelope'>rv</div></span></div></li>
 				</ul>
 			</div>
 		</div>
@@ -399,7 +399,7 @@
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><strong>Where you can find me</strong></h4></div>
 		</div>
 		<div class="row footerCont">
-		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li><div class="icons"><i class="fa fa-envelope-o"> <span id='secret_envelope'>rv</span></i></div ></li><li><div class="icons"><i class="fa fa-mobile fa-2x"></i></div></li><li><div class="icons"><i class="fa fa-home"> Slovakia</i></div></li></ul></div>
+		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li><div class="icons"><i class="fa fa-envelope-o"> <span class='secret_envelope'>rv</span></i></div ></li><li><div class="icons"><i class="fa fa-github fa-lg"> <span>ice-wind rep.</span></i></div></li><li><div class="icons"><i class="fa fa-home"> Slovakia</i></div></li></ul></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li class='FAQ' data-toggle="modal" data-target="#FAQ">1. FAQ </li><li class='share' data-toggle="modal" data-target="#share">2. Share </li><li class='licence' data-toggle="modal" data-target="#licence">3. Terms of use </li></ul></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><div id="map"></div></div>
 		</div>
