--- a/_main/index.html
+++ b/_main/index.html
@@ -36,6 +36,9 @@
  <body data-spy="scroll" data-target=".navbar" >
     <div class="navbar-wrapper ">
 		<div class="navbar-container">
+		
+		
+		
 		<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 			<symbol id="arrow" viewBox="0 0 43 43">
 			<g transform=" translate(21.5 0)">
@@ -62,6 +65,10 @@
 			</g>
 			</symbol>
 		</svg>
+		
+		<div class='main_brand_logo'>
+		<img src='img/RV_white_cut.svg' alt='My_main_brand_image'/>
+		</div>
 			<svg class="main_arrow_icon"><use xlink:href="#arrow" /></svg>
 			
 		</div>
@@ -76,7 +83,7 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>                        
 			  </button>
-			  <a class="navbar-brand" href="#"><img src='img/myBrand.jpg' alt='Brand Logo' /></a>
+			  <a class="navbar-brand" href="#"><img src='img/RV_white.svg' alt='Brand Logo' /></a>
 			</div>
 			<div>
 			  <div class="collapse navbar-collapse navbar-right" id="myNavbar" >
@@ -291,7 +298,7 @@
 					<!-- /.carousel -->
 			</div>
 			<div class='gallery_link col-md-3  edges_vertical text-center'>
-				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/2picture_icon_flat_far.png' alt='gallery image' /></a></div>
+				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/picture_icon_flat_brown.png' alt='gallery image' /></a></div>
 			</div>
 		</div>
 	</div>
