--- a/_cv/index.html
+++ b/_cv/index.html
@@ -110,7 +110,7 @@
 								<dt>HTML/CSS: </dt> <p>Advace </p>
 							</dl>
 							<dl>
-								<dt>PHP </dt> <p>Advace </p>
+								<dt>PHP </dt> <p>Intermediate </p>
 							</dl>
 							<dl>
 								<dt>JavaScript </dt> <p>Advace </p>
